Fixed link hover jumping
Added a padding-bottom to compensate for bottom border width.

--- a/css/style.css
+++ b/css/style.css
@@ -122,12 +122,14 @@ nav > ul > li:last-child > a:hover {
   color: #252525;
   background-color: white;
   letter-spacing: -0.5px;
+  border-bottom-width: 0.25em;
   border-bottom-style: hidden;
+  padding-bottom: 0.25em;
 }
 
 .links:hover {
-  border-bottom-width: 0.25em;
   border-bottom-style: solid;
+  padding-bottom: 0px;
 }
 
 main {
@@ -156,6 +158,10 @@ main {
   float: left;
   display: inline-block;
   padding-left: 80px;
+}
+
+.black-button {
+
 }
 
 /* Override: On screens that are 1120px wide or less */
@@ -246,7 +252,7 @@ main {
     text-decoration: none;
     font-weight: 500;
     letter-spacing: -0.5px;
-    display: block;
+    display: inline-block;
     text-align: left;
     margin-left: 20px;
     padding-top: 8px;
